2015-09-28  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2015-09-25  James Bowman  <james.bowman@ftdichip.com>

	* ft32-dis.c (print_insn_ft32): Fix incorrect data field mask.

2015-09-23  Nick Clifton  <nickc@redhat.com>

	PR binutils/15835
	* readelf.c (struct elf_section_list): New structure.
	(symtab_shndx_hdr): Replace with symtab_shndx_list.
	(get_32bit_elf_symbols): Scan for a symbol index table matching
	the symbol table in use.
	(get_64bit_elf_symbols): Likewise.
	(process_section_headers): Handle multiple symbol index sections.

2015-09-22  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* readelf.c (process_dynamic_section): Handle DF_1_STUB, DF_1_PIE.

2015-09-10  Erik Ackermann  <kurterikackermann@gmail.com>

	* strings.c: Add -s/--output-separator option to specify custom
	separator string.
	* NEWS: Mention the new feature.
	* doc/binutils.text (strings): Document the new command line
	option.

2015-09-09  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi (ar): Remove bogus sentance concerning thin
	archives and invalid paths.

2015-09-03  Nick Clifton  <nickc@redhat.com>

	PR binutils/18879
	* readelf.c (get_unwind_section_word): Check for negative offsets
	and very small sections.
	(dump_arm_unwind): Warn if the table offset is too large.

2015-08-28  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.am (TOOL_PROGS): Add readelf.
	* Makefile.in: Regenerated.

2015-08-24  Yaakov Selkowitz  <yselkowi@redhat.com>

	* configure: Regenerate.

2015-08-17  Alan Modra  <amodra@gmail.com>

	* configure: Regenerate.

2015-08-07  Andrew Burgess  <andrew.burgess@embecosm.com>

	* objcopy.c (is_specified_symbol_predicate): Don't stop at first
	match.  Non-match rules set found to FALSE.

2015-08-06  Yaakov Selkowitz  <yselkowi@redhat.com>

	* configure: Regenerate.

2015-08-05  Nick Clifton  <nickc@redhat.com>

	* doc/binutils.texi: Document that the --only-keep-debug option