@@ -1,0 +1,6 @@
+SECTIONS
+{
+  .foo : { *(.foo) }
+  .bar : { *(.bar) }
+  /DISCARD/ : { *(.*) }
+}
