@@ -1,3 +1,10 @@
+2015-09-29  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR binutils/19005
+	* objcopy.c (copy_object): Adjust the output section size to
+	skip gap fills between sections when copying from input sections
+	to output sections.
+
 2015-09-28  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated French translation.
